namespace SokoHub.Domain.Modules.Identity;

public class Permission
{
}
